# hass-frontend

./: .gitignore  AGENTS.md  README.md  check_translation_structure.py  pyproject.toml
.github/workflows/: ci.yaml  codeql-analysis.yml  publish-to-pypi.yaml  relative-ci.yaml  release.yaml  release222.yaml
script/: prepare-translations.sh  prepare-translations.sh.modified  translations_download  validate-translations.sh
src/cast/: cast_manager.ts  const.ts  dev_const.default.ts  dev_const.ts  receiver_messages.ts
src/entrypoints/: service-worker.ts
src/translations/: en.json  translationMetadata.json
src/translations/app/: af-4ff2afa665d2b15432f879f131188ff4.json  bg-6eb7744055ae6bc2e3a82270e7379224.json  ca-76575f672bea99b8e096f942d877789f.json  cs-ab8ff28458537d0ca3ad1b601396560f.json  de-5975cf7122854dcbb162511b71d7cb69.json  el-68d2b5ec38373b3c9e3defb8b4b99030.json  es-419-ded1a8314b979aea015fe42d67377c93.json  et-29f1c60be8534f1292bf6ff6eb8b9624.json  fi-9e9ac2fae98acfe19be74d3b94dc8a6a.json  fr-992a71a8346d32c8d77defdfb79da8b3.json  fy-ffe17e69c5bb7df144b396f69af5de6e.json  ga-5203a86d6d2ef9728aa90e77f800f6fd.json  he-0d68c8ce27413ebf3dbaeb9dcdee290c.json  hu-0250dc42aef5462845bcd6c34432127a.json  id-e5e99453f1e32aaffbb3e60db5d3e88b.json  it-4e280dc3707ff5b0b1fca8afc2438517.json  ja-c563b98f65ad8d2c52d96458acb4bea6.json  ko-e853e2e25b6717eef026fe5cbc73deb4.json  lt-1b39f99195623a0deb89210bd985d58e.json  mk-67fc832d2fa264d6206cba85c0288817.json  nl-a1086013f6e8430f5d6e044c7dd20dbd.json  pl-477dfe13ecf6ffaeab3a03fea963dd94.json  (+14 more)
(+185 files in other folders)
