[build-system]
requires = ["setuptools~=77.0"]
build-backend = "setuptools.build_meta"

[project]
name         = "xoai-frontend"
version      = "20260315.1"
license      = "Apache-2.0"
license-files = ["LICENSE*"]
description  = "小鸥智能的web页面"
readme       = "README.md"
authors      = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
requires-python = ">=3.13"

[project.urls]
"Homepage" = "https://github.com/yuanzhou029/hass"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hass_frontend*"]
